fix: [FFM-2670]: Added fix for overflowing rules on flag page (#8010)

--- a/src/modules/75-cf/components/FlagActivation/FlagActivation.module.scss
+++ b/src/modules/75-cf/components/FlagActivation/FlagActivation.module.scss
@@ -10,6 +10,8 @@
 }
 
 .tabContainer {
+  height: calc(100% - 140px);
+  overflow-y: scroll;
   :global {
     .bp3-tab-list {
       border-bottom: 1px solid var(--grey-200) !important;
@@ -53,11 +55,10 @@
   height: 100vh;
 
   .actionButtons {
-    position: absolute;
     bottom: 0;
     right: 0;
     width: 100% !important;
-    border-top: 1px solid #e4e4eb;
+    box-shadow: var(--elevation-2);
     padding-left: var(--spacing-huge) !important;
     padding-top: 22px !important;
     height: 80px;
@@ -69,11 +70,11 @@
   font-size: 14px !important;
   font-weight: 400 !important;
   line-height: 19px !important;
-  color: #333333 !important;
+  color: var(gray-900) !important;
   padding: var(--spacing-small) var(--spacing-xsmall) var(--spacing-xsmall) !important;
 }
 
 [aria-selected='true'] > .tabTitle {
   font-weight: 600 !important;
-  color: #22272d !important;
+  color: var(gray-900) !important;
 }
